# urlish

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  pkg.nix  shell.nix  stack.yaml  urlish.cabal
.github/workflows/: haskell.yml
app/: Main.hs
