name:                urlish
version:             0.1.0.0
synopsis:            URI shortener
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flaviocorpa@gmail.com
copyright:           2019, Flavio Corpa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md

executable urlish
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  build-depends:       base >=4.12 && <4.13
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010
