name:               urlish
version:            0.1.0.0
synopsis:           URI shortener
description:        Please see README.md
license:            MIT
license-file:       LICENSE
author:             Flavio Corpa
maintainer:         flaviocorpa@gmail.com
copyright:          2019 © Flavio Corpa
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: CHANGELOG.md

executable urlish
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
      base          >=4.12    && <5
    , bytestring    >=0.10.10 && <0.11
    , hedis         >=0.12.13 && <0.13
    , mtl           >=2.2.2   && <2.3
    , network-uri   >=2.6.3   && <2.7
    , random        >=1.2.0   && <1.3
    , scotty        >=0.12    && <0.13
    , semigroups    >=0.19.1  && <0.20
    , text          >=1.2.4   && <1.3
    , transformers  >=0.5.6   && <0.6

  default-language: Haskell2010
